--- a/index.html
+++ b/index.html
@@ -3,6 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap">
+    <link rel="stylesheet" href="style.css">
+    <br>
     <title>Will You Be My Valentine?</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Sacramento&display=swap">
     <link rel="stylesheet" href="style.css"> <!-- Link to external stylesheet -->
@@ -11,7 +14,8 @@
     <div id="container">
         <div id="image-container"></div> <!-- Container for displaying images -->
         <div id="text-container">
-            <div id="question">Will you be my valentine, Chloe?</div> <!-- Question -->
+            <div id ="question_1">Hi Chloe,</div>
+            <div id="question">Will you be my Valentine?</div> <!-- Question -->
             <div id="options">
                 <button id="yes-button" onclick="selectOption('yes')">Yes</button> <!-- Yes button -->
                 <button id="no-button" onclick="selectOption('no')">No</button> <!-- No button -->
